--- a/DairyProject/templates/contact.html
+++ b/DairyProject/templates/contact.html
@@ -1,6 +1,9 @@
+{% extends 'layout/main.html' %}
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+    {% block body %}
 
 <head>
     <meta charset="utf-8">
@@ -230,6 +233,8 @@
         });
         
         </script>
+
 </body>
+{% endblock body %}
 
 </html>
