--- a/DairyProject/templates/c_register.html
+++ b/DairyProject/templates/c_register.html
@@ -92,7 +92,7 @@
             }
         }
     </script>
-
+<link rel="stylesheet" href="{% static 'css/signup.css' %}">
     <body>
         <div class="registration-container">
             <h1>Customer </h1>
