--- a/DairyProject/templates/dash/delivery_dashboard.html
+++ b/DairyProject/templates/dash/delivery_dashboard.html
@@ -93,7 +93,7 @@
             <div class="user-name">{{ delivery_boy.first_name }}</div>
         </div>
         <ul>
-            <li><a href="#" class="dashboard-link" data-url="{% url 'delivery_profile' %}">Todays Orders</a></li>
+            <li><a href="#" class="dashboard-link" data-url="{% url 'order_history' %}">Todays Orders</a></li>
             <li><a href="#" class="dashboard-link" data-url="{% url 'del_edit_profile' %}">Edit Profile</a></li>
             <li><a href="#" class="dashboard-link" data-url="{% url 'delivery_profile' %}">My Profile</a></li>
         </ul>
