--- a/DairyProject/templates/layout/main.html
+++ b/DairyProject/templates/layout/main.html
@@ -157,7 +157,20 @@
     {% endblock body %}
     <div class="profile-pic-container">
         <img src="{% static 'img/d.jpeg' %}" alt="Profile Picture" class="profile-pic">
-    </div>    
+    </div>   
+
+    <!--bot-->
+    <script type="text/javascript">
+        (function(d, m){
+            var kommunicateSettings = 
+                {"appId":"2b4010ede0f2f3f5b83da78a3e3c372e0","popupWidget":true,"automaticChatOpenOnNavigation":true};
+            var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+            s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+            var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+            window.kommunicate = m; m._globals = kommunicateSettings;
+        })(document, window.kommunicate || {});
+    </script>
+    
     <a target="_blank" href="https://wa.me/6238097126" class="btn btn-lg btn-primary btn-lg-square rounded-circle whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
