--- a/DairyProject/templates/inc/delnav.html
+++ b/DairyProject/templates/inc/delnav.html
@@ -1,33 +1,34 @@
+<!-- delnav.html -->
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<body>
-<nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
-    <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
-        <img class="img-fluid" src="{% static '/img/logo.jpeg' %}" height="200" width="100" alt="Logo">
-    </a>
-    <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav ms-auto p-4 p-lg-0">
+
+<nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+    <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
+        <a href="{% url 'home' %}">
+            <img class="img-fluid" src="{% static '/img/logo.jpeg' %}" height="80" width="80" alt="Logo">
+        </a>
+        <ul class="navbar-nav navbar-nav-right">
+            <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
+
             <li class="nav-item nav-profile dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
                     {% if user.is_authenticated %}
                         {% if delivery_boy.deliveryboyeditprofile.profile_photo %}
-                            <img src="{{ delivery_boy.deliveryboyeditprofile.profile_photo.url }}" alt="Profile Photo" height="40" width="40" class="rounded-circle me-2">
+                            <img src="{{ delivery_boy.deliveryboyeditprofile.profile_photo.url }}" alt="Profile Photo" height="60" width="60"> {{ delivery_boy.first_name }} {{ delivery_boy.last_name }}
                         {% else %}
-                            <i class="fas fa-user-circle fa-lg"></i>
+                            <i class="ti-user"></i>
                         {% endif %}
                     {% endif %}
                 </a>
-                <div class="dropdown-menu bg-light rounded-0 m-0">
-                    <a href="{% url 's_change_password' %}" class="dropdown-item"><i class="fas fa-key me-2"></i>Change Password</a>
-                    <a href="{% url 'logout' %}" class="dropdown-item"><i class="fas fa-sign-out-alt me-2"></i>Logout</a>
+                <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
+                    <a class="dropdown-item" href="{% url 's_change_password' %}" data-url="{% url 's_change_password' %}">
+                        <i class="fas fa-key"></i> Change Password
+                    </a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">
+                        <i class="ti-power-off text-primary"></i>
+                        Logout
+                    </a>
                 </div>
             </li>
-        </div>
+        </ul>
     </div>
 </nav>
-</body>
-</html>
