--- a/DairyProject/templates/admin/deliveryboy_approval.html
+++ b/DairyProject/templates/admin/deliveryboy_approval.html
@@ -1,6 +1,6 @@
 <!-- deliveryboy_approval.html -->
 {% load static %}
-{% block content %}
+{% block body %}
   <h2>Delivery Boy Approval Requests</h2>
 
   {% if approval_requests %}
