--- a/DairyProject/templates/dash/admindash.html
+++ b/DairyProject/templates/dash/admindash.html
@@ -132,6 +132,7 @@ body {
     <a href="{% url 'view_carts' %}" data-url="{% url 'view_carts' %}"><i class="fas fa-horse"></i> Orders  </a>
     <a href="{% url 'pending_sellers' %}" data-url="{% url 'pending_sellers' %}"><i class="fas fa-horse"></i> Approve</a>
     <a href="{% url 'admin_delivery_view' %}" data-url="{% url 'admin_delivery_view' %}"><i class="fas fa-horse"></i> Delivery Boy Request</a>
+    <a href="{% url 'order_history' %}" data-url="{% url 'order_history' %}"><i class="fas fa-horse"></i>   Order History</a>
     <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-horse"></i> Users <i class="fas fa-caret-down"></i>
     </a>
@@ -139,7 +140,7 @@ body {
         <a class="dropdown-item" href="{% url 's_view' %}" data-url="{% url 's_view' %}">Seller</a>
         <a class="dropdown-item" href="{% url 'c_view' %}" data-url="{% url 'c_view' %}">Customer</a>
         <a class="dropdown-item" href="{% url 'veterinarians' %}" data-url="{% url 'veterinarians' %}">Veterinarian</a>
-        <a class="dropdown-item" href="{% url 'veterinarians' %}" data-url="{% url 'veterinarians' %}">Delivery Boy</a>
+        <a class="dropdown-item" href="{% url 'delboy' %}" data-url="{% url 'delboy' %}">Delivery Boy</a>
     </div>
     
 </div>
