--- a/DairyProject/templates/dash/admindash.html
+++ b/DairyProject/templates/dash/admindash.html
@@ -133,6 +133,7 @@ body {
     <a href="{% url 'pending_sellers' %}" data-url="{% url 'pending_sellers' %}"><i class="fas fa-horse"></i> Approve</a>
     <a href="{% url 'admin_delivery_view' %}" data-url="{% url 'admin_delivery_view' %}"><i class="fas fa-horse"></i> Delivery Boy Request</a>
     <a href="{% url 'order_history' %}" data-url="{% url 'order_history' %}"><i class="fas fa-horse"></i>   Order History</a>
+    <a href="{% url 'meeting' %}" data-url="{% url 'meeting' %}"><i class="fas fa-horse"></i>  Schedule Meeting</a>
     <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-horse"></i> Users <i class="fas fa-caret-down"></i>
     </a>
