--- a/DairyProject/templates/dash/v_dashboard.html
+++ b/DairyProject/templates/dash/v_dashboard.html
@@ -92,7 +92,7 @@
                 <div class="user-name">Dr.{{ user.veterinarian.doctor_name }}</div>
             </div>
             <a href="{% url 'complete_v_profile' %}" data-url="{% url 'complete_v_profile' %}"><i class="fas fa-user-edit"></i> Edit Profile</a>
-            <a href="{% url 'complete_v_profile' %}" data-url="{% url 'complete_v_profile' %}"><i class="fas fa-calendar"></i> View Appointments</a>
+            <a href="{% url 'vet_appointment' %}" data-url="{% url 'vet_appointment' %}"><i class="fas fa-calendar"></i> View Appointments</a>
             <!-- Add more links based on your requirements -->
         </div>
 
