--- a/DairyProject/templates/inc/navbar.html
+++ b/DairyProject/templates/inc/navbar.html
@@ -14,11 +14,12 @@
             <a href="{%  url 'home' %}"class="nav-item nav-link active">Home</a>
             <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
             <a href="{% url 'product_detail' %}" class="nav-item nav-link">Product</a>
+            <a href="{% url 'meetinglist' %}" class="nav-item nav-link">Events</a>
             <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Info</a>
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Team</a>
                 <div class="dropdown-menu bg-light rounded-0 m-0">
-                    <a href="{% url 'team' %}" class="dropdown-item">Our top sellers</a>
-                    <a  class="dropdown-item">-</a>
+                    <a href="{% url 'team' %}" class="dropdown-item">Our  sellers</a>
+                    <a href="{% url 'vet_team' %}" class="dropdown-item">Our  Doctors</a>
                     <a  class="dropdown-item">-</a>
                     <a  class="dropdown-item">-</a>
                     <a  class="dropdown-item">-</a>
