--- a/DairyProject/templates/layout/main.html
+++ b/DairyProject/templates/layout/main.html
@@ -156,7 +156,7 @@
     <!-- Copyright End -->
     {% endblock body %}
     <div class="profile-pic-container">
-        <img src="{% static 'img/d.jpeg' %}" alt="Profile Picture" class="profile-pic">
+        <img src="{% static 'img/a.jpeg' %}" alt="Profile Picture" class="profile-pic">
     </div>   
 
     <!--bot-->
